--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,7 @@
 {
   "name": "Node.js",
   "image": "mcr.microsoft.com/devcontainers/javascript-node:1-22-bookworm",
-  "postCreateCommand": "npm install && npm run dev",
+  "postCreateCommand": "npm install",
+  "postStartCommand": "npm run dev",
    "forwardPorts": [3000]
 }
